[package]
name = "webtest"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.11.0"
actix-multipart = "0.7.2"
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures-util = "0.3"
tempfile = "3.13"
uuid = { version = "1.11", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mime = "0.3"
log = "0.4"
env_logger = "0.11"
